# openevals

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: build.yml  integration_tests.yml  release.yml  release_js.yml
evaluators/: __init__.py  base.py  exact.py  llm.py  prebuilts.py  types.py  utils.py
evaluators/json/: __init__.py  json.py
evaluators/prompts/: __init__.py  conciseness.py  correctness.py  hallucination.py
evaluators/string/: __init__.py  embedding_similarity.py  levenshtein.py
evaluators/trajectory/: __init__.py  exact.py  llm.py  strict.py  subset.py  superset.py  unordered.py  utils.py
js/: .eslintcache  .eslintrc.cjs  .gitignore  README.md  langchain.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/src/: api_leakage.ts  exact.ts  experimental.ts  index.ts  llm.ts  types.ts  utils.ts
matchers/: __init__.py  base.py  exact.py
prompts/: __init__.py  prompts.py
python/: README.md  package.json  pyproject.toml
python/evaluators/: exact.py  llm.py  utils.py
python/openevals/: __init__.py  api_leakage.py  llm.py  tool_calling_dataset.py  types.py  utils.py
python/tests/: test_answer_relevance.py  test_conciseness.py  test_correctness.py  test_embedding_similarity.py  test_exact.py  test_hallucination.py  test_json.py  test_json_async.py  (+10 more)
scorers/: base.py  exact.py
scripts/: generate_language_readmes.py
tests/: test_conciseness.py  test_correctness.py  test_exact.py  test_hallucination.py  test_json.py  test_llm.py  test_prebuilts.py  test_trajectory.py  test_trajectory_llm.py
(+213 files in other folders)
