[project]
name = "langsmith-evaluators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.5",
    "langsmith>=0.3.8",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "openai>=1.61.1",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
